--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -216,10 +216,11 @@ repos:
         exclude: ".*fixtures"
 
 
-#  - repo: https://github.com/pycqa/isort
-#    rev: 5.12.0
-#    hooks:
-#      - id: isort
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--line-length", "120"]
 
 #      - id: tests
 #        name: tests
