Resource-based STDP supporting BLIFAT neuron add

--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library("${PROJECT_NAME}"
     INTERFACE
     include/knp/neuron-traits/type_traits.h
     include/knp/neuron-traits/blifat.h
+    include/knp/neuron-traits/synaptic_resource_stdp.h
+    include/knp/neuron-traits/synaptic_resource_stdp_neurons.h
     include/knp/neuron-traits/all_traits.h
 )
 add_library(KNP::Neuron::Traits ALIAS "${PROJECT_NAME}")
