--- a/knp/python-framework/CMakeLists.txt
+++ b/knp/python-framework/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-python-framework LANGUAGES C CXX)
 
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
 find_package(Boost 1.66.0 COMPONENTS python REQUIRED)
 
 include(knp-functions)
@@ -17,7 +18,7 @@ file(GLOB_RECURSE MODULES_SOURCE CONFIGURE_DEPENDS
 knp_add_library("${PROJECT_NAME}"
     SHARED
     ${MODULES_SOURCE}
-
 )
 
+target_include_directories("${PROJECT_NAME}" PRIVATE ${Python_INCLUDE_DIRS})
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::Core KNP::BaseFramework::Core Boost::headers Boost::python)
