--- a/knp/backends/cpu/cpu-library/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-library/CMakeLists.txt
@@ -15,7 +15,10 @@ include(knp-functions)
 
 file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/backends/cpu-library/*.h)
 
-knp_add_library("${PROJECT_NAME}" STATIC ${${PROJECT_NAME}_headers})
+knp_add_library("${PROJECT_NAME}"
+        STATIC
+        include/knp/backends/cpu-library/impl/synaptic_resource_stdp_impl.h
+        ${${PROJECT_NAME}_headers})
 add_library(KNP::Backends::CPU::Library ALIAS "${PROJECT_NAME}")
 
 source_group(source REGULAR_EXPRESSION "impl/.*")
