--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library("${PROJECT_NAME}"
     include/knp/neuron-traits/blifat.h
     include/knp/neuron-traits/stdp_synaptic_resource_rule.h
     include/knp/neuron-traits/all_traits.h
-)
+    include/knp/neuron-traits/stdp_type_traits.h)
 add_library(KNP::Neuron::Traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
