--- a/knp/autodoc/CMakeLists.txt
+++ b/knp/autodoc/CMakeLists.txt
@@ -23,7 +23,7 @@ if(KNP_BUILD_DOCUMENTATION)
     add_doxygen(knp-doc "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in"
         PROJECT_NAME "Kaspersky Neuromorphic Platform"
         PROJECT_VERSION "1.0.0"
-        PROJECT_BRIEF "API Reference Guide"
+        PROJECT_BRIEF "API Reference"
         OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/doc_doxygen"
         INPUT "${KNP_DIR}"
         EXAMPLE_PATH "${KNP_DIR}/tests"
