Uid export to Python improved

--- a/knp/python-framework/CMakeLists.txt
+++ b/knp/python-framework/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(knp-python-framework LANGUAGES C CXX)
+project(knp_python_framework LANGUAGES C CXX)
 
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
 find_package(Boost 1.66.0 COMPONENTS python REQUIRED)
@@ -19,6 +19,11 @@ knp_add_library("${PROJECT_NAME}"
     SHARED
     ${MODULES_SOURCE}
 )
+
+# target_sources(knp_python_framework
+#   PRIVATE
+#   ${MODULES_SOURCE}
+# )
 
 target_include_directories("${PROJECT_NAME}" PRIVATE ${Python_INCLUDE_DIRS})
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::Core KNP::BaseFramework::Core Boost::headers Boost::python)
