--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -16,4 +16,4 @@ root=knp
 #  Chromium team uses own headers instead of standard.
 # - whitespace/newline
 #  An else should appear on the same line as the preceding }
-filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11,-whitespace/newline
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11,-whitespace/newline, -whitespace/parens
