--- a/knp/python-framework/CMakeLists.txt
+++ b/knp/python-framework/CMakeLists.txt
@@ -15,3 +15,8 @@ knp_add_python_module(core LINK_LIBRARIES KNP::Core)
 knp_add_python_module(neuron_traits LINK_LIBRARIES KNP::Neuron::Traits)
 knp_add_python_module(synapse_traits LINK_LIBRARIES KNP::Synapse::Traits)
 knp_add_python_module(base_framework LINK_LIBRARIES KNP::BaseFramework::Core)
+
+#add_custom_command(TARGET module2 POST_BUILD
+#        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:module2>
+#        "${CMAKE_SOURCE_DIR}/awesome_package"
+#        )
