--- a/knp/python-framework/CMakeLists.txt
+++ b/knp/python-framework/CMakeLists.txt
@@ -11,12 +11,34 @@ find_package(Boost 1.66.0 COMPONENTS python REQUIRED)
 
 include(knp-functions)
 
-knp_add_python_module(core LINK_LIBRARIES KNP::Core)
-knp_add_python_module(neuron_traits LINK_LIBRARIES KNP::Neuron::Traits)
-knp_add_python_module(synapse_traits LINK_LIBRARIES KNP::Synapse::Traits)
-knp_add_python_module(base_framework LINK_LIBRARIES KNP::BaseFramework::Core)
+set(KNP_PYTHON_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_NAME}")
 
-#add_custom_command(TARGET module2 POST_BUILD
-#        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:module2>
-#        "${CMAKE_SOURCE_DIR}/awesome_package"
-#        )
+knp_add_python_module(core
+        LINK_LIBRARIES KNP::Core)
+knp_add_python_module(neuron_traits
+        LINK_LIBRARIES KNP::Neuron::Traits)
+knp_add_python_module(synapse_traits
+        LINK_LIBRARIES KNP::Synapse::Traits)
+knp_add_python_module(base_framework
+        LINK_LIBRARIES KNP::BaseFramework::Core)
+
+add_custom_target("${PROJECT_NAME}-copy-python-tests" ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/tests" "${KNP_PYTHON_OUTPUT_DIRECTORY}/tests")
+add_custom_target("${PROJECT_NAME}-copy-common-python-files" ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/packaging/python" "${KNP_PYTHON_OUTPUT_DIRECTORY}/knp")
+
+find_program(MYPY_STUBGEN stubgen REQUIRED)
+get_property(KNP_PYTHON_TARGETS DIRECTORY ${dir} PROPERTY BUILDSYSTEM_TARGETS)
+
+add_custom_target("${PROJECT_NAME}-generate-python-interface-files" ALL
+        WORKING_DIRECTORY "${KNP_PYTHON_OUTPUT_DIRECTORY}"
+        COMMAND ${MYPY_STUBGEN} -p "knp" -o "." --include-docstrings --include-private
+        DEPENDS ${KNP_PYTHON_TARGETS})
+
+get_property(KNP_PYTHON_TARGETS DIRECTORY ${dir} PROPERTY BUILDSYSTEM_TARGETS)
+
+if(KNP_BUILD_TESTS)
+    add_test(NAME Pytest
+            WORKING_DIRECTORY "${KNP_PYTHON_OUTPUT_DIRECTORY}"
+            COMMAND ${Python_EXECUTABLE} -m pytest)
+endif()
