--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -1273,7 +1273,7 @@ VERBATIM_HEADERS       = @DOXYGEN_VERBATIM_HEADERS@
 # classes, structs, unions or interfaces.
 # The default value is: YES.
 
-ALPHABETICAL_INDEX     = YES
+ALPHABETICAL_INDEX     = NO
 
 # The IGNORE_PREFIX tag can be used to specify a prefix (or a list of prefixes)
 # that should be ignored while generating the index headers. The IGNORE_PREFIX
