--- a/knp/autodoc/CMakeLists.txt
+++ b/knp/autodoc/CMakeLists.txt
@@ -15,10 +15,14 @@ if(KNP_BUILD_DOCUMENTATION)
             core-library base-framework
             neuron-traits-library synapse-traits-library
             devices-library
-            backends/cpu-single-threaded-backend
+            backends/cpu/cpu-single-threaded-backend
+            backends/cpu/cpu-multi-threaded-backend
+            backends/cpu/thread_pool
         )
         list(APPEND _strip_list "${KNP_DIR}/${_i}/include")
     endforeach()
+
+    list(APPEND _strip_list "${KNP_DIR}")
 
     add_doxygen(knp-doc "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in"
         PROJECT_NAME "Kaspersky Neuromorphic Platform"
@@ -30,7 +34,7 @@ if(KNP_BUILD_DOCUMENTATION)
         SOURCE_BROWSER YES
         BUNDLE_ID "com.kaspersky.KNP"
         PUBLISHER_NAME "Kaspersky Lab"
-        EXCLUDE_PATTERNS "*.descr* */impl/*"
+        EXCLUDE_PATTERNS "*.descr* */impl/* */tests/*"
         EXCLUDE_SYMBOLS "*impl*, *testing*"
         STRIP_FROM_INC_PATH "${_strip_list}"
     )
