--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,29 @@ include(knp-functions)
 include(third-party)
 include(version)
 
+get_knp_version()
 
-project(knp)
+if(NOT KNP_VERSION)
+    message(FATAL_ERROR "KNP version mandatory for build, but can't be determined!")
+endif()
+
+project(knp VERSION ${KNP_VERSION})
+
+
+#
+# KNP build options set.
+#
+
+# Build not from source directory, possible via add_subdirectory().
+if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    set(KNP_BUILD_TESTS_DEFAULT OFF)
+    set(KNP_BUILD_DOCUMENTATION_DEFAULT OFF)
+    set(KNP_BUILD_EXAMPLES_DEFAULT OFF)
+else()
+    set(KNP_BUILD_TESTS_DEFAULT ON)
+    set(KNP_BUILD_DOCUMENTATION_DEFAULT ON)
+    set(KNP_BUILD_EXAMPLES_DEFAULT ON)
+endif()
 
 if(KNP_MAINTAINER_BUILD)
     set(KNP_COVERAGE_DEFAULT OFF)
@@ -21,9 +42,9 @@ else()
     set(KNP_ENABLE_AVX_DEFAULT OFF)
 endif()
 
-option(KNP_BUILD_TESTS "Build tests" ON)
-option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ON)
-option(KNP_BUILD_EXAMPLES "Build usage examples" ON)
+option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_TESTS_DEFAULT})
+option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ${KNP_BUILD_DOCUMENTATION_DEFAULT})
+option(KNP_BUILD_EXAMPLES "Build usage examples" ${KNP_BUILD_EXAMPLES_DEFAULT})
 option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
 option(KNP_ENABLE_COVERAGE "Enable coverage checking" ${KNP_COVERAGE_DEFAULT})
 option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ${KNP_ENABLE_AVX_DEFAULT})
@@ -41,7 +62,6 @@ endif()
 set(ENABLE_FAST_MATH ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-
 if(NOT KNP_MAINTAINER_BUILD)
     execute_process(COMMAND pre-commit install
                     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -52,19 +72,21 @@ if(NOT KNP_MAINTAINER_BUILD)
                     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
 
-if(KNP_BUILD_TESTS)
-    add_compile_definitions(SPDLOG_ACTIVE_LEVEL=0)
-endif()
-
 # Need for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+include(print-variables)
+
+
+#
+# Build third-party.
+#
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/third-party)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/third-party)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/third-party)
 
 set(CMAKE_TIDY_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/knp/.clang-tidy" CACHE PATH  "Clang-tidy config file")
-set(DOXYFILE_IN "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in")
 
 # Make cache variables for install destinations.
 include(GNUInstallDirs)
@@ -72,14 +94,18 @@ include(GNUInstallDirs)
 file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "third-party/**/include")
 include_directories(third-party ${THIRD_PARTY_INCLUDES})
 
-include(print-variables)
-
 add_third_party(googletest)
+
+if(KNP_BUILD_TESTS)
+    add_compile_definitions(SPDLOG_ACTIVE_LEVEL=0)
+endif()
 
 set(SPDLOG_BUILD_PIC ON)
 add_third_party(spdlog)
+
 add_third_party(pybind11)
 add_third_party(pcm)
+
 set(FLATBUFFERS_BUILD_TESTS OFF)
 set(FLATBUFFERS_BUILD_CPP17 ON)
 add_third_party(flatbuffers)
@@ -87,6 +113,11 @@ add_third_party(flatbuffers)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
+
+#
+# Build KNP.
+#
 
 add_subdirectory(knp)
 
