--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -8,14 +8,18 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-core VERSION "${KNP_VERSION}" LANGUAGES C CXX)
 
-find_package(Boost 1.66.0 REQUIRED)
+find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 find_package(ZeroMQ REQUIRED)
 
+# Need for installation.
+include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 include(clang-tidy)
 include(knp-functions)
 
-file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/core/*.h)
+set(${PROJECT_NAME}_PUBLIC_INCLUDE_DIR "knp/core")
+
+file(GLOB_RECURSE ${PROJECT_NAME}_headers include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/*.h)
 
 set(${PROJECT_NAME}_FB_SOURCES
     impl/messaging/fbs/message_envelope.fbs
@@ -24,6 +28,11 @@ set(${PROJECT_NAME}_FB_SOURCES
     impl/messaging/fbs/spike_message.fbs
     impl/messaging/fbs/synaptic_impact_message.fbs
 )
+
+
+#
+# Build.
+#
 
 flatbuffers_generate_headers(
     TARGET "${PROJECT_NAME}_messaging"
@@ -82,11 +91,108 @@ if(KNP_ENABLE_COVERAGE)
     link_target_with_gcov("${PROJECT_NAME}")
 endif()
 
-install(TARGETS "${PROJECT_NAME}"
-        EXPORT "${PROJECT_NAME}"
-#        NAMESPACE KNP::
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+
+#
+# Installation.
+#
+
+message(STATUS "Installation config...")
+
+set(PACKAGE_INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR})
+
+configure_file(
+    "${CMAKE_CURRENT_LIST_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h")
+
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY AnyNewerVersion
 )
+
+configure_package_config_file(
+    "${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}Config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}Config.cmake"
+    INSTALL_DESTINATION
+    "${CMAKE_INSTALL_LIBDIR}/cmake/"
+)
+
+install(TARGETS "${PROJECT_NAME}"
+    EXPORT "${PROJECT_NAME}"
+#    NAMESPACE KNP::
+    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    PUBLIC_HEADER
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/include/knp/core"
+)
+
+install(
+    FILES
+        ${${PROJECT_NAME}_headers}
+        "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h"
+    DESTINATION "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}")
+
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}Config.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
+)
+
+
+#
+# Packaging.
+#
+
+set(CPACK_PACKAGE_CONTACT "Artiom N. <>")
+set(CPACK_PACKAGE_NAME    "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
+#SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/packages")
+
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Kaspersky Neuromorphic Platform core")
+set(CPACK_PACKAGE_DESCRIPTION "\
+    Kaspersky Neuromorphic Platform is a spiking networks simulator\n\
+    Core library for development.")
+
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
+
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_INSTALL_PREFIX})
+set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
+#
+# Deb package.
+#
+
+set(CPACK_DEBIAN_PACKAGE_SECTION "science")
+
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-all-dev (>= ${KNP_BOOST_MIN_VERSION}),")
+
+set(CPACK_DEBIAN_PACKAGE_NAME ${PROJECT_NAME}-dev)
+
+set(CPACK_DEBIAN_FILE_NAME "${PROJECT_NAME}-dev_${PROJECT_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}.deb")
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
+set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "cppzmq-dev (>= 4.9.0-1) , cppzmq (4.9.0-1)")
+
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
+
+set(CPACK_DEB_PACKAGE_COMPONENT ON)
+
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+set(CPACK_RPM_COMPONENT_INSTALL ON)
+
+#
+# RPM package.
+#
+
+set(CPACK_RPM_PACKAGE_RELOCATABLE  ON)
+set(CPACK_RPM_PACKAGE_LICENSE   "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+
+include (CPack)
