--- a/knp/devices-library/CMakeLists.txt
+++ b/knp/devices-library/CMakeLists.txt
@@ -44,3 +44,18 @@ install(TARGETS "${PROJECT_NAME}-cpu"
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
+
+install(TARGETS "${PROJECT_NAME}-cpu"
+        EXPORT "${PROJECT_NAME}-cpu"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+        INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+        PUBLIC_HEADER
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
+        )
+
+install(
+        FILES
+        ${${PROJECT_NAME}_headers}
+        DESTINATION "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}")
